Fix header spacing

--- a/src/style/_objects.header.less
+++ b/src/style/_objects.header.less
@@ -14,7 +14,6 @@
     align-items: flex-end;
 
     height: calc(100vh - 2 * var(--content-margin));
-    margin-bottom: var(--content-spacing);
   }
 
 }
@@ -26,7 +25,6 @@
   font-family: @heading-font;
   font-size: @header-font-size;
   position: sticky;
-  margin-bottom: var(--content-margin);
 
   border-block-end: 0.07em solid @palette-black;
 }
